<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F3EEEA"
    tools:context=".signupActivity">


    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creat_acconut_now"
        android:textStyle="bold"
        android:fontFamily="@font/proteststrikeregular"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:textSize="30sp"
        android:textColor="#7289A6"

        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_your_information"
        android:fontFamily="@font/robotomono"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        android:textColor="#7289A6"
        />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/enter_your_name"
        android:textColorHint="@color/blue"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/editext"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/sharp_account_circle_24"
        />



    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_your_location"
        android:textColorHint="@color/blue"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/editext"
        android:inputType="text"
        android:drawableStart="@drawable/baseline_location_on_24"
        />



    <EditText
        android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_birthday_mm_dd_yyyy"
        android:textColorHint="@color/blue"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/editext"
        android:inputType="date"
        android:drawableStart="@drawable/baseline_calendar_month_24"

        />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_your_email"
        android:textColorHint="@color/blue"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/editext"
        android:inputType="text"
        android:drawableStart="@drawable/baseline_email_24"
        />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_password"
        android:textColorHint="@color/blue"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/editext"
        android:inputType="textPassword"
        android:drawableStart="@drawable/baseline_lock_24"
        />

    <EditText
        android:id="@+id/passwordconf"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/blue"
        android:padding="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/editext"
        android:inputType="textPassword"
        android:drawableStart="@drawable/baseline_lock_24"
        />


    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_page"
        android:textSize="20sp"
        android:padding="12dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:background="@drawable/button"
        android:textColor="@color/gray"/>



</LinearLayout>
