<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cream"
    tools:context=".GitStartedActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_the_best_furniture"
        android:fontFamily="@font/proteststrikeregular"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/blue"
        android:layout_gravity="center"

        />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="362dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/robotomono"
        android:gravity="center"
        android:lineSpacingExtra="20dp"
        android:text="@string/there_are_many_new_outfits"
        android:textColor="@color/blue"
        android:textSize="20sp" />



    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textSize="20sp"
        android:padding="15dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:background="@drawable/button"
        android:textColor="@color/gray"/>


</LinearLayout>
