<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F3EEEA"
    tools:context=".choose">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/logo2"
        android:adjustViewBounds="true"
        />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_welcome"
        android:textStyle="bold"
        android:fontFamily="@font/proteststrikeregular"
        android:layout_marginTop="50dp"
        android:textSize="36sp"
        android:textColor="#7289A6"
        android:layout_gravity="center"

        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enjoy_our_shopping_online"
        android:fontFamily="@font/robotomono"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="#7289A6"
        android:layout_gravity="center"
        />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_main"
        android:textSize="20sp"
        android:padding="12dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:textColor="@color/gray"
        android:background="@drawable/button"
        />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:padding="12dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:textColor="@color/gray"
        android:background="@drawable/button"        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_via_social_media"
        android:fontFamily="@font/robotomono"
        android:layout_marginTop="22dp"
        android:textSize="16sp"
        android:textColor="#7289A6"
        android:layout_gravity="center"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"
            android:background="@null"
            android:layout_marginRight="10dp"/>

        <ImageButton
            android:id="@+id/gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gmail"
            android:background="@null"
            android:layout_marginRight="10dp"/>

        <ImageButton
            android:id="@+id/linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/linkedin"
            android:background="@null"/>
    </LinearLayout>


</LinearLayout>
