<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/pink2"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView3">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="96dp"
                android:layout_height="92dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="79dp"
                android:padding="5dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linlayout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:contentDescription="@string/item_pic" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="205dp"
                android:text="@string/item_name"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="217dp"
                android:layout_marginBottom="16dp"
                android:text="@string/price"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView2"/>

            <LinearLayout
                android:id="@+id/linlayout"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="33dp"
                android:layout_marginBottom="17dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="132dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/decrement"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:backgroundTint="@color/cream"
                        android:padding="0dp"
                        android:text="@string/decrement"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/display"

                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:inputType="number"
                        android:text="1"
                        android:textColor="@android:color/black" />

                    <Button
                        android:id="@+id/increment"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:backgroundTint="@color/cream"
                        android:padding="0dp"
                        android:text="+"
                        android:textColor="@android:color/black"
                        android:textSize="25sp" />


                </LinearLayout>

                <ImageView
                    android:id="@+id/itemdel"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:contentDescription="deleting"
                    tools:srcCompat="@drawable/baseline_delete_24" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>