<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/pink2"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView3">


            <ImageView
                android:id="@+id/likedimgv"
                android:layout_width="96dp"
                android:layout_height="92dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="79dp"
                android:padding="5dp"

                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:contentDescription="@string/item_pic" />

            <TextView
                android:id="@+id/likedname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="205dp"
                android:textColor="@color/blue"
                android:fontFamily="@font/robotomono"
                android:text="@string/item_name"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/likedprice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/likedimgv"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/likedprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="217dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/robotomono"
                android:text="@string/price"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/likedimgv"
                app:layout_constraintTop_toBottomOf="@+id/likedname"/>

            <LinearLayout
                android:id="@+id/linlayout1"
                android:layout_width="140dp"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="33dp"
                android:layout_marginBottom="17dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/likedname"
                app:layout_constraintTop_toTopOf="parent">



                <Button
                    android:id="@+id/btnaddbtn"
                    android:layout_width="70dp"
                    android:layout_height="48dp"
                    android:textColor="@color/gray"
                    android:backgroundTint="@color/pink3"
                    android:background="@drawable/button"
                    android:fontFamily="@font/robotomono"
                    android:text="Add To Cart">

                </Button>

                <ImageView
                    android:id="@+id/itemdel1"
                    android:layout_width="45dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="deleting"
                    tools:srcCompat="@drawable/fullheart" />
            </LinearLayout>






        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>